--- a/site/.kobweb/conf.yaml
+++ b/site/.kobweb/conf.yaml
@@ -1,5 +1,8 @@
 site:
   title: "Alpha Diallo - Android dev"
+  head:
+    styles:
+      - "https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap"
 
 server:
   files:
